# Geometry

utils3d/: CMakeLists.txt  README.md
utils3d/src/: CMakeLists.txt  utils3d.hpp
utils3d/tests/: CMakeLists.txt  tests_main.cpp
